chang div section

--- a/index.html
+++ b/index.html
@@ -77,122 +77,122 @@
     </div>
 
 
-    <section>
-
-        <div id="conteneurs">
-
-            <div class="Hébergements">
-
-                <h2>Hébergement à Marseille</h2>
-                <div id="conteneur1">
-                    <article class="hotel">
-
-                        <a href="#"><img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="hotel1"></a>
-                        <h3>Auberge de la Cannebiere</h3>
-                        <p>Nuit à partir de 25€</p>
-                        <div class="star">
-                            <i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color:#0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
-                            <i class="fas fa-star fa-xs" style="color:#F2F2F2;"></i>
-                        </div>
-                    </article>
-
-                    <article class="hotel">
-
-                        <a href="#"><img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hotel2"></a>
-                        <h3>Hôtel du port</h3>
-                        <p>Nuit à partir de 52€</p>
-                        <div class="star">
-                            <i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
-                            <i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
-                        </div>
-                    </article>
-
-                    <article class="hotel">
-                        <a href="#"><img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="hotel3"></a><br>
-                        <h3>Hôtel les mouettes</h3>
-                        <p>Nuit à partir de 76€</p>
-                        <div class="star">
-                            <i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
-                            <i class="fas fa-star fa-xs" style="color:#F2F2F2;"></i>
-                        </div>
-
-                    </article>
+    <section id="conteneurs">
 
 
-                    <article class="hotel">
-                        <a href="#"><img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="hotel4"></a>
-                        <h3>Hôtel de la mer</h3>
-                        <P>Nuit à partir de 48€</P>
-                        <div class="star">
-                            <i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color:#F2F2F2;"></i>
-                            <i class="fas fa-star fa-xs" style="color:#F2F2F2;"></i>
-                        </div>
 
-                    </article>
+        <div class="Hébergements">
 
-                    <article class="hotel">
-                        <a href="#"><img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="hotel5"></a>
-                        <h3>Auberge le panier</h3>
-                        <p>Nuit à partir de 23€</p>
-                        <div class="star">
-                            <i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
-                            <i class="fas fa-star fa-xs" style="color:#F2F2F2;"></i>
-                        </div>
-                    </article>
+            <h2>Hébergement à Marseille</h2>
+            <div id="conteneur1">
+                <article class="hotel">
 
-                    <article class="hotel">
-                        <a href="#"><img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="hotel6"></a><br>
-                        <h3>Hôtel chez Amina</h3>
-                        <p>Nuit à partir de 95€</p>
-                        <div class="star">
-                            <i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
-                            <i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
-                        </div>
-                    </article>
+                    <a href="#"><img src="images/hebergements/4_small/marcus-loke-WQJvWU_HZFo-unsplash.jpg" alt="hotel1"></a>
+                    <h3>Auberge de la Cannebiere</h3>
+                    <p>Nuit à partir de 25€</p>
+                    <div class="star">
+                        <i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color:#0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
+                        <i class="fas fa-star fa-xs" style="color:#F2F2F2;"></i>
+                    </div>
+                </article>
 
-                </div>
-                <div class="afficher">
-                    <a href="#" style="text-decoration :none; color: black;">Afficher plus</a>
-                </div>
+                <article class="hotel">
+
+                    <a href="#"><img src="images/hebergements/4_small/fred-kleber-gTbaxaVLvsg-unsplash.jpg" alt="Hotel2"></a>
+                    <h3>Hôtel du port</h3>
+                    <p>Nuit à partir de 52€</p>
+                    <div class="star">
+                        <i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
+                        <i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
+                    </div>
+                </article>
+
+                <article class="hotel">
+                    <a href="#"><img src="images/hebergements/4_small/reisetopia-B8WIgxA_PFU-unsplash.jpg" alt="hotel3"></a><br>
+                    <h3>Hôtel les mouettes</h3>
+                    <p>Nuit à partir de 76€</p>
+                    <div class="star">
+                        <i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
+                        <i class="fas fa-star fa-xs" style="color:#F2F2F2;"></i>
+                    </div>
+
+                </article>
+
+
+                <article class="hotel">
+                    <a href="#"><img src="images/hebergements/4_small/annie-spratt-Eg1qcIitAuA-unsplash.jpg" alt="hotel4"></a>
+                    <h3>Hôtel de la mer</h3>
+                    <P>Nuit à partir de 48€</P>
+                    <div class="star">
+                        <i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color:#F2F2F2;"></i>
+                        <i class="fas fa-star fa-xs" style="color:#F2F2F2;"></i>
+                    </div>
+
+                </article>
+
+                <article class="hotel">
+                    <a href="#"><img src="images/hebergements/4_small/nicate-lee-kT-ZyaiwBe0-unsplash.jpg" alt="hotel5"></a>
+                    <h3>Auberge le panier</h3>
+                    <p>Nuit à partir de 23€</p>
+                    <div class="star">
+                        <i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
+                        <i class="fas fa-star fa-xs" style="color:#F2F2F2;"></i>
+                    </div>
+                </article>
+
+                <article class="hotel">
+                    <a href="#"><img src="images/hebergements/4_small/febrian-zakaria-M6S1WvfW68A-unsplash.jpg" alt="hotel6"></a><br>
+                    <h3>Hôtel chez Amina</h3>
+                    <p>Nuit à partir de 95€</p>
+                    <div class="star">
+                        <i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
+                        <i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
+                    </div>
+                </article>
+
             </div>
-
-            <div class="populaires">
-                <h2>Les plus populaires <i class="fas fa-chart-line"></i></h2>
-                <div id="conteneur2">
-                    <article class="hotel1">
-
-                        <a href="#"><img width="80" height="110" class="imageflottante" src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="hotel7"></a>
-                        <h3>Hôtel le soleil du matin</h3>
-                        <p>Nuit à partir de 128€</p>
-                        <div class="star2">
-                            <i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
-                            <i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
-                        </div>
-                    </article>
-
-                    <article class="hotel1">
-                        <a href="#"><img width="130" height="90" class="imageflottante" src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="hotel8"></a>
-                        <h3>Au coeur de l'eau Chambres d'hôtes</h3>
-                        <p>Nuit à partir de 71€</p>
-                        <div class="star2">
-                            <i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
-                            <i class="fas fa-star fa-xs" style="color:#F2F2F2;"></i>
-                        </div>
-                    </article>
-
-                    <article class="hotel1">
-                        <a href="#"><img width="130" height="90" class="imageflottante" src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="hotel9"></a>
-                        <h3>Hôtel tout bleu et Blanc</h3>
-                        <p>Nuit à partir de 68€</p>
-                        <div class="star2">
-                            <i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
-                            <i class="fas fa-star fa-xs" style="color:#F2F2F2;"></i>
-                        </div>
-                    </article>
-                </div>
+            <div class="afficher">
+                <a href="#" style="text-decoration :none; color: black;">Afficher plus</a>
             </div>
-
         </div>
+
+        <aside class="populaires">
+            <h2>Les plus populaires <i class="fas fa-chart-line"></i></h2>
+            <div id="conteneur2">
+                <article class="hotel1">
+
+                    <a href="#"><img width="80" height="110" class="imageflottante" src="images/hebergements/4_small/emile-guillemot-Bj_rcSC5XfE-unsplash.jpg" alt="hotel7"></a>
+                    <h3>Hôtel le soleil du matin</h3>
+                    <p>Nuit à partir de 128€</p>
+                    <div class="star2">
+                        <i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
+                        <i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
+                    </div>
+                </article>
+
+                <article class="hotel1">
+                    <a href="#"><img width="130" height="90" class="imageflottante" src="images/hebergements/4_small/aw-creative-VGs8z60yT2c-unsplash.jpg" alt="hotel8"></a>
+                    <h3>Au coeur de l'eau Chambres d'hôtes</h3>
+                    <p>Nuit à partir de 71€</p>
+                    <div class="star2">
+                        <i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
+                        <i class="fas fa-star fa-xs" style="color:#F2F2F2;"></i>
+                    </div>
+                </article>
+
+                <article class="hotel1">
+                    <a href="#"><img width="130" height="90" class="imageflottante" src="images/hebergements/4_small/febrian-zakaria-sjvU0THccQA-unsplash.jpg" alt="hotel9"></a>
+                    <h3>Hôtel tout bleu et Blanc</h3>
+                    <p>Nuit à partir de 68€</p>
+                    <div class="star2">
+                        <i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i><i class="fas fa-star fa-xs" style="color: #0065FC;"></i>
+                        <i class="fas fa-star fa-xs" style="color:#F2F2F2;"></i>
+                    </div>
+                </article>
+            </div>
+        </aside>
+
+
 
     </section>
 
