ste-search width

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="filtre">
 
                 <ul>
-                    <h3>Filtres</h3><br>
+                    <h3>Filtres</h3>
 
                     <li class="filter"><i class="fas fa-money-bill-wave"></i><strong>Economiques</strong></li>
                     <li class="filter"><i class="fas fa-child"></i><strong>Familial</strong></li>
